--- a/src/theme/utilities.scss
+++ b/src/theme/utilities.scss
@@ -171,8 +171,11 @@ $font-sizes: (
 // WIDTH, MAX WIDTH
 $widths: (
   '10': 10%,
+  '15': 15%,
+  '20': 20%,
   '25': 25%,
   '33': 33.3%,
+  '48': 48%,
   '50': 50%,
   '66': 66.6%,
   '75': 75%,
