refactor: change export button

--- a/src/app/home/results/results.component.html
+++ b/src/app/home/results/results.component.html
@@ -14,9 +14,9 @@
       <div>
         <canvas id="chart">{{ chart }}</canvas>
       </div>
-      <button mat-flat-button color="primary" id="download" (click)="downloadChart()">
+      <button mat-flat-button color="primary" id="download" (click)="exportChart()">
         <mat-icon fontIcon="download"> </mat-icon>
-        Baixar imagem
+        Exportar
       </button>
     </mat-card-content>
   </mat-card>
