--- a/src/app/home/results/results.component.html
+++ b/src/app/home/results/results.component.html
@@ -4,10 +4,10 @@
       <form class="u-display--flex u-flex-direction--column" [formGroup]="form">
         <mat-form-field>
           <mat-label>Análise</mat-label>
-          <mat-select>
-            <mat-option *ngFor="let analise of analises" [value]="analise.value">{{
-              analise.viewValue
-            }}</mat-option>
+          <mat-select [(value)]="selectedAnalysis">
+            <mat-option *ngFor="let analysis of analyses; let i = index" [value]="analysis.id"
+              >{{ analyses.length - i }}. {{ analysis.data | date : 'dd/MM/yyyy HH:mm' }}</mat-option
+            >
           </mat-select>
         </mat-form-field>
       </form>
