--- a/src/app/home/results/results.component.html
+++ b/src/app/home/results/results.component.html
@@ -14,10 +14,16 @@
       <div>
         <canvas id="chart">{{ chart }}</canvas>
       </div>
-      <button mat-flat-button color="primary" id="download" (click)="exportChart()">
-        <mat-icon fontIcon="download"> </mat-icon>
-        Exportar
-      </button>
+      <div class="u-display--flex u-flex-direction--row u-flex-justify--around">
+        <button mat-flat-button color="primary" id="download" (click)="exportChart()">
+          <mat-icon fontIcon="download"></mat-icon>
+          Exportar
+        </button>
+        <button mat-flat-button color="warn" id="delete" (click)="deleteAnalysis()">
+          <mat-icon fontIcon="delete"></mat-icon>
+          Apagar
+        </button>
+      </div>
     </mat-card-content>
   </mat-card>
 </div>
