--- a/src/app/shared/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/shared/components/confirm-dialog/confirm-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Apagar análise</h1>
 <div mat-dialog-content>Tem certeza que deseja apagar a análise?</div>
 <div mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close color="primary">Não</button>
-  <button mat-flat-button mat-dialog-close cdkFocusInitial color="primary">Sim</button>
+  <button mat-button mat-dialog-close color="primary" (click)="cancel()">Não</button>
+  <button mat-flat-button mat-dialog-close cdkFocusInitial color="primary" (click)="confirm()">Sim</button>
 </div>
