--- a/src/theme/components/card.scss
+++ b/src/theme/components/card.scss
@@ -25,7 +25,7 @@
 
     img {
       margin: 2rem;
-      max-width: 75%;
+      max-width: 50vh;
       height: auto;
       align-self: center;
     }
