fix: adjust layout

--- a/src/app/home/create-user/create-user.component.html
+++ b/src/app/home/create-user/create-user.component.html
@@ -1,7 +1,8 @@
 <div class="c-container">
   <mat-card class="c-card">
     <mat-card-title class="u-text-align--center">Cadastrar Usuário</mat-card-title>
-    <mat-card-content>
+    <mat-card-content class="u-flex-expand u-flex-justify--around">
+      <img src="assets/user.svg" alt="User" />
       <form class="u-display--flex u-flex-direction--column" [formGroup]="form">
         <mat-form-field appearance="fill">
           <mat-label>Nome</mat-label>
