--- a/src/app/home/results/results.component.html
+++ b/src/app/home/results/results.component.html
@@ -14,7 +14,7 @@
           </mat-select>
         </mat-form-field>
       </form>
-      <img *ngIf="analyses.length === 0" src="assets/blank.svg" alt="Blank" />
+      <img *ngIf="analyses.length === 0" src="assets/no_data.svg" alt="Blank" />
 
       <div *ngIf="analyses.length > 0">
         <div>
