--- a/src/theme/components/card.scss
+++ b/src/theme/components/card.scss
@@ -6,13 +6,13 @@
 
   mat-card-title {
     font-size: 1.5vw;
-    margin-top: 2vh;
+    margin: 2vh;
   }
 
   mat-card-subtitle {
     font-size: 1.2vw;
     line-height: 1.5vw;
-    margin: 2vh;
+    margin-bottom: 2vh;
   }
 
   mat-card-content {
