--- a/src/app/auth/send-recover-email/send-recover-email.component.html
+++ b/src/app/auth/send-recover-email/send-recover-email.component.html
@@ -1,7 +1,10 @@
 <div class="c-container">
   <mat-card class="c-card">
-    <mat-card-title class="u-text-align--center"> Digite o email institucional cadastrado </mat-card-title>
-    <mat-card-content>
+    <mat-card-title class="u-text-align--center"> Esqueceu a senha? </mat-card-title>
+    <mat-card-subtitle class="u-text-align--center"> Digite o email institucional cadastrado </mat-card-subtitle>
+    <mat-card-content class="u-flex-expand u-flex-justify--around">
+      <img src="assets/forgot_password.svg" alt="Recover" />
+
       <form class="u-display--flex u-flex-direction--column" [formGroup]="form">
         <mat-form-field appearance="fill">
           <mat-label>Email instituicional</mat-label>
