--- a/src/app/home/new-analysis/new-analysis.component.html
+++ b/src/app/home/new-analysis/new-analysis.component.html
@@ -42,6 +42,12 @@
       <mat-card-subtitle class="u-text-align--center">Dados Socioeconômicos</mat-card-subtitle>
       <form class="form-group" [formGroup]="dadosAcademicosForm">
         <mat-form-field appearance="fill">
+          <mat-label>A renda total mensal de sua família se situa na faixa</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of rendaFamiliarOptions" [value]="option">{{ option }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
           <mat-label>A sua cor ou raça é?</mat-label>
           <mat-select>
             <mat-option *ngFor="let option of corRacaOptions" [value]="option">{{ option }}</mat-option>
@@ -54,9 +60,17 @@
           </mat-select>
         </mat-form-field>
         <mat-form-field appearance="fill">
-          <mat-label>Com que idade você começou a exercer atividade remunerada?</mat-label>
+          <mat-label>Você trabalha atualmente em atividade remunerada?</mat-label>
           <mat-select>
             <mat-option *ngFor="let option of atividadeRemuneradaOptions" [value]="option">{{
+              option
+            }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Com que idade você começou a exercer atividade remunerada?</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of idadeAtividadeRemuneradaOptions" [value]="option">{{
               option
             }}</mat-option>
           </mat-select>
@@ -86,10 +100,8 @@
           </mat-select>
         </mat-form-field>
         <mat-form-field appearance="fill">
-          <mat-label>Durante o curso, você terá que trabalhar?</mat-label>
-          <mat-select>
-            <mat-option *ngFor="let option of trabalhoOptions" [value]="option">{{ option }}</mat-option>
-          </mat-select>
+          <mat-label>Em que ano você concluiu (ou concluirá) o curso de Ensino Médio?</mat-label>
+          <input matInput type="number" id="anoConclusaoEnsinoMedio" formControlName="anoConclusaoEnsinoMedio" />
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Em que turno você fez (ou faz) o curso de ensino médio?</mat-label>
@@ -107,6 +119,159 @@
           <mat-label>Pertence a uma comunidade quilombola?</mat-label>
           <mat-select>
             <mat-option *ngFor="let option of simNaoOptions" [value]="option">{{ option }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Por quanto tempo você fez cursinho?</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of cursinhoOptions" [value]="option">{{ option }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Qual a principal ocupação da sua mãe?</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of ocupacaoMaeOptions" [value]="option">{{ option }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Qual a principal ocupação do seu pai?</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of ocupacaoPaiOptions" [value]="option">{{ option }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Qual a sua situação quanto à moradia?</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of situacaoMoradiaOptions" [value]="option">{{ option }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Qual o Estado em que nasceu?</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of estadoNascimentoOptions" [value]="option">{{ option }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Qual o local de sua residência?</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of localResidenciaOptions" [value]="option">{{ option }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Qual o motivo que o levou a escolher seu curso?</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of motivoCursoOptions" [value]="option">{{ option }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Qual o nível de instrução da sua mãe?</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of nivelInstrucaoOptions" [value]="option">{{ option }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Qual o nível de instrução do seu pai?</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of nivelInstrucaoOptions" [value]="option">{{ option }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Qual o seu estado civil?</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of estadoCivilOptions" [value]="option">{{ option }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Qual o seu sexo?</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of sexoOptions" [value]="option">{{ option }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Qual é a sua participação na vida econômica de seu grupo familiar?</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of participacaoFamiliar" [value]="option">{{ option }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Quantas pessoas contribuem para a obtenção da renda familiar?</mat-label>
+          <input
+            matInput
+            type="number"
+            id="contribuintesRendaFamiliar"
+            formControlName="contribuintesRendaFamiliar" />
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Quantas pessoas são sustentadas com a renda familiar?</mat-label>
+          <input matInput type="number" id="sustentadasRendaFamiliar" formControlName="sustentadasRendaFamiliar" />
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Quanto à sua escolha por este curso, você se considera</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of escolhaCursoOptions" [value]="option">{{ option }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Que recursos você utilizou para fazer sua escolha de curso?</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of recursosEscolhaCursoOptions" [value]="option">{{
+              option
+            }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Quem ou o que mais influenciou na escolha do curso?</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of influenciaEscolhaCursoOptions" [value]="option">{{
+              option
+            }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label
+            >Se já iniciou um curso universitário anteriormente, qual sua principal razão para participar de um
+            novo Processo Seletivo?</mat-label
+          >
+          <mat-select>
+            <mat-option *ngFor="let option of novoProcessoSeletivo" [value]="option">{{ option }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Se você é indígena, qual é a sua etnia?</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of indigenaOptions" [value]="option">{{ option }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Você apresenta alguma necessidade educacional especial?</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of necessidadeEspecialOptions" [value]="option">{{
+              option
+            }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Tipo de necessidade educacional especial</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of tipoNecessidadeEspecialOptions" [value]="option">{{
+              option
+            }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Você já fez o vestibular em outros anos? (desconsidere treineiro)</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of vestibularOutrosAnosOptions" [value]="option">{{
+              option
+            }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Você já iniciou algum curso superior?</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let option of inicioCursoSuperiorOptions" [value]="option">{{
+              option
+            }}</mat-option>
           </mat-select>
         </mat-form-field>
         <app-submit-button
