refactor: change set password button label to definir

--- a/src/app/auth/set-password/set-password.component.html
+++ b/src/app/auth/set-password/set-password.component.html
@@ -23,7 +23,7 @@
         </mat-form-field>
         <app-submit-button
           class="u-display--flex"
-          label="Salvar"
+          label="Definir"
           [disabled]="!form.valid"
           (click)="submitPassword()"
           [loading]="isLoading"></app-submit-button>
